The sass is now compiling

--- a/prototype/00-source-files/ZZ-Swordion-DO-NOT-EDIT/sass/output-files/ie8.scss
+++ b/prototype/00-source-files/ZZ-Swordion-DO-NOT-EDIT/sass/output-files/ie8.scss
@@ -1,6 +1,4 @@
 
-
-
 /*================================================*\
 	MAIN CSS OUTPUT FILE (OLD BROWSERS)
 //-----------------------------------------------
@@ -18,10 +16,47 @@ $gt-ie8: false;
 $lt-ie10: true;
 $lt-ie9: true;
 
-@import "../generated-files/configurations.scss";
+//CONFIG FILES
+
+//for icon mixins and functions (generated)
+@import "../icon-names.scss";
+
+//variables for sprite mixins
+@import "../01-sprite-sheets-SASS/**/*.scss";
+
+//Swordion sass functions
+@import "../00-functions-SASS/**/*.scss";
+
+//user editable config files
+@import "../../../01-sass/01-config-SASS/**/*.scss";
 
 //Prevents media queries from being rendered in the css if they are for screen resolutions lower than this.
 //If the media query is for screens above this width, the css is outputted outside of a media query just appearing as normal css in the compiled style sheet
 $fix-mqs: bp('page');
 
-@import "../generated-files/main-files.scss";
+
+//MAIN FILES
+
+//Swordion mixins
+@import "../02-mixins-SASS/**/*.scss";
+
+//user mixins
+@import "../../../01-sass/02-project-mixins-SASS/**/*.scss";
+
+//user 3rd party plugin css
+@import "../../../01-sass/03-plugins-SASS/**/*.scss";
+
+//swordion 3rd party plugin css
+@import "../03-plugins-SASS/**/*.scss";
+
+//user styles that should be easy to overwrite
+@import "../../../01-sass/04-base-SASS/**/*.scss";
+
+//Swordion system styles that are typically functional in some way (eg. grid system)
+@import "../04-base-SASS/**/*.scss";
+
+//modular styles
+@import "../../../01-sass/05-modules-SASS/**/*.scss";
+
+//things like print and theme styles
+@import "../../../01-sass/06-extras-SASS/**/*.scss";
