--- a/prototype/00-source-files/01-sass/05-modules-SASS/prototype-only/protoTemplateList.scss
+++ b/prototype/00-source-files/01-sass/05-modules-SASS/prototype-only/protoTemplateList.scss
@@ -6,13 +6,18 @@
 	width: 100%;
 	height: 100%;
 	z-index: 9999999999999999999999999;
-	padding: 10vh;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
 	background: #fff;
 	background: rgba(#fff,0.9);
+	overflow-y: scroll;
+
+	&__body {
+		padding: 10vh;
+		min-height: 100vh;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+	}
 
 	@if($lt-ie10){
 		display: none;
@@ -51,11 +56,18 @@
 	}
 		&__item {
 			margin-top: 20px;
-			&:first-child { margin-top: 0; }
+			&:first-child {
+				margin-top: 0;
+			}
+
 		}
 			&__link {
 				display: block;
 				padding: 15px;
 				text-transform: capitalize;
+
+				&--isActive {
+					background: CG-brand(2);
+				}
 			}
 }
