icomoon unpackager for gulp
The task isn't connected into the sass compilation function yet but this is the core icomoon unpackager functionality

--- a/prototype/00-source-files/ZZ-Swordion-DO-NOT-EDIT/sass/output-files/ie9.scss
+++ b/prototype/00-source-files/ZZ-Swordion-DO-NOT-EDIT/sass/output-files/ie9.scss
@@ -18,8 +18,8 @@ $lt-ie9: false;
 
 //CONFIG FILES
 
-//for icon mixins and functions (generated)
-@import "../icon-names.scss";
+//particularly for icon map variable (generated)
+@import "../generated-files/**/*.scss";
 
 //variables for sprite mixins
 @import "../01-sprite-sheets-SASS/**/*.scss";
