Added auto px to rem conversion
No more need to use the @include font-size(##px); mixin for setting font sizes any more. Just apply px values directly and PostCSS applies the rem version for us.

--- a/prototype-site/00-source-files/01-sass/04-base-SASS/02-tooltip.scss
+++ b/prototype-site/00-source-files/01-sass/04-base-SASS/02-tooltip.scss
@@ -76,7 +76,7 @@ $module: 'tooltip';
 		color: $C-text;
 		width: 300px;
 		border-radius: 3px;
-		@include MG-font-size(13px);
+		font-size: 13px;
 		padding: 10px;
 		z-index: 5;
 		line-height: 1;
