--- a/prototype-site/00-source-files/01-sass/05-modules-SASS/accordion.scss
+++ b/prototype-site/00-source-files/01-sass/05-modules-SASS/accordion.scss
@@ -28,7 +28,7 @@ $CL-module: '.accordion';
 			}
 		}
 
-			&__heading { margin: 0; @include MG-font-size(20px); }
+			&__heading { margin: 0; font-size: 20px; }
 
 				&__headLink {
 					display: block;
