--- a/prototype-site/00-source-files/01-sass/04-base-SASS/00-elements.scss
+++ b/prototype-site/00-source-files/01-sass/04-base-SASS/00-elements.scss
@@ -67,7 +67,7 @@ html {
 //Setting the font-size using the mixin is the best way to set font size.
 body {
 	position: relative;
-	@include MG-font-size(14px);
+	font-size: 14px;//px to rem postCSS plugin converts this to an rem value
 	line-height: 1.5;
 	font-family: $sans-serif;
 	margin: 0;
@@ -97,14 +97,14 @@ h1, h2, h3, h4, h5, h6 {
 	}
 }
 h1 {
-	@include MG-font-size(30px);
+	font-size: 30px;
 	margin: 0;
 	+ h2 { margin-top: 30px; }
 }
-h2 { @include MG-font-size(24px); margin-top: 50px; font-weight: $semi-bold; }
-h3 { @include MG-font-size(22px); text-transform: uppercase; font-weight: $normal; }
-h4 { @include MG-font-size(18px); font-weight: $semi-bold; }
-h5 { @include MG-font-size(14px); text-transform: uppercase; font-style: italic; }
+h2 { font-size: 24px; margin-top: 50px; font-weight: $semi-bold; }
+h3 { font-size: 22px; text-transform: uppercase; font-weight: $normal; }
+h4 { font-size: 18px; font-weight: $semi-bold; }
+h5 { font-size: 14px; text-transform: uppercase; font-style: italic; }
 
 p { margin: $VG-standardContent-paragraphSpacing 0 0; }
 
@@ -126,5 +126,5 @@ blockquote {
 	background-color: $CB-grey-light;
 	margin: $VG-standardContent-paragraphSpacing 0 0;
 	padding: 20px;
-	@include MG-font-size(16px);
+	font-size: 16px;
 }
