--- a/prototype-site/00-source-files/01-sass/04-base-SASS/00-elements.scss
+++ b/prototype-site/00-source-files/01-sass/04-base-SASS/00-elements.scss
@@ -76,10 +76,10 @@ body {
 	color: $CG-body-text;
 }
 
-h1, h2, h3, h4, h5, h6, p, ul, ol {
+p, ul, ol {
 	//margin top becomes the default paragraph spacer
 	margin-bottom: 0;
-	margin-top: 1em;
+	margin-top: $VG-standardContent-paragraphSpacing;
 
 	//allows body elements to sit hard up against the top border of their parent element without causing spacing issues later in the text.
 	&:first-child { margin-top: 0; }
@@ -91,7 +91,8 @@ h1, h2, h3, h4, h5, h6 {
 	font-weight: $normal;
 	line-height: 1;
 	margin-bottom: 15px;
-	margin-top: 30px;
+	margin-top: 1em;
+	&:first-child { margin-top: 0; }
 	+ {
 		p, ul, ol { margin-top: 0; }
 	}
@@ -105,9 +106,6 @@ h2 { font-size: 24px; margin-top: 50px; font-weight: $semi-bold; }
 h3 { font-size: 22px; text-transform: uppercase; font-weight: $normal; }
 h4 { font-size: 18px; font-weight: $semi-bold; }
 h5 { font-size: 14px; text-transform: uppercase; font-style: italic; }
-
-p { margin: $VG-standardContent-paragraphSpacing 0 0; }
-
 
 a {
 	text-decoration: none;
