tidied downloadLinks scss

--- a/prototype-site/00-source-files/01-sass/05-modules-SASS/downloadLinks.scss
+++ b/prototype-site/00-source-files/01-sass/05-modules-SASS/downloadLinks.scss
@@ -49,7 +49,12 @@
 		@extend %file-static-styles;
 		color: $color;
 		border-color: $color;
-		@include MG-grad(desaturate(lighten($color,$lighten),$desaturation),desaturate(lighten($color,$lighten + 30),$desaturation), v, (backup: #fff));
+		@include MG-grad(
+			desaturate(lighten($color,$lighten),$desaturation),
+			desaturate(lighten($color,$lighten + 30),$desaturation),
+			v,
+			(backup: #fff)
+		);
 	}
 }
 
