--- a/prototype-site/00-source-files/04-icomoon-unpackager/style.scss
+++ b/prototype-site/00-source-files/04-icomoon-unpackager/style.scss
@@ -2,11 +2,11 @@
 
 @font-face {
     font-family: 'icons';
-    src:    url('fonts/icons.eot?3hmppr');
-    src:    url('fonts/icons.eot?3hmppr#iefix') format('embedded-opentype'),
-        url('fonts/icons.ttf?3hmppr') format('truetype'),
-        url('fonts/icons.woff?3hmppr') format('woff'),
-        url('fonts/icons.svg?3hmppr#icons') format('svg');
+    src:    url('#{$icomoon-font-path}/icons.eot?2u7668');
+    src:    url('#{$icomoon-font-path}/icons.eot?2u7668#iefix') format('embedded-opentype'),
+        url('#{$icomoon-font-path}/icons.ttf?2u7668') format('truetype'),
+        url('#{$icomoon-font-path}/icons.woff?2u7668') format('woff'),
+        url('#{$icomoon-font-path}/icons.svg?2u7668#icons') format('svg');
     font-weight: normal;
     font-style: normal;
 }
@@ -26,34 +26,39 @@
     -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-share {
-    &:before {
-        content: $icon-share;
-    }
-}
-.icon-arrow-down {
-    &:before {
-        content: $icon-arrow-down;
-    }
-}
-.icon-arrow-left {
-    &:before {
-        content: $icon-arrow-left;
-    }
-}
-.icon-arrow-right {
-    &:before {
-        content: $icon-arrow-right;
-    }
-}
-.icon-arrow-up {
-    &:before {
-        content: $icon-arrow-up;
-    }
-}
 .icon-search {
     &:before {
         content: $icon-search;
+    }
+}
+.icon-arrow--down {
+    &:before {
+        content: $icon-arrow--down;
+    }
+}
+.icon-arrow--left {
+    &:before {
+        content: $icon-arrow--left;
+    }
+}
+.icon-arrow--right {
+    &:before {
+        content: $icon-arrow--right;
+    }
+}
+.icon-arrow--up {
+    &:before {
+        content: $icon-arrow--up;
+    }
+}
+.icon-facebook {
+    &:before {
+        content: $icon-facebook;
+    }
+}
+.icon-fontsize {
+    &:before {
+        content: $icon-fontsize;
     }
 }
 .icon-rtf {
@@ -81,6 +86,46 @@
         content: $icon-powerpoint;
     }
 }
+.icon-hamburger {
+    &:before {
+        content: $icon-hamburger;
+    }
+}
+.icon-audio {
+    &:before {
+        content: $icon-audio;
+    }
+}
+.icon-podcast {
+    &:before {
+        content: $icon-podcast;
+    }
+}
+.icon-globe {
+    &:before {
+        content: $icon-globe;
+    }
+}
+.icon-spinner {
+    &:before {
+        content: $icon-spinner;
+    }
+}
+.icon-star--empty {
+    &:before {
+        content: $icon-star--empty;
+    }
+}
+.icon-star--half {
+    &:before {
+        content: $icon-star--half;
+    }
+}
+.icon-star--full {
+    &:before {
+        content: $icon-star--full;
+    }
+}
 .icon-cross {
     &:before {
         content: $icon-cross;
@@ -94,21 +139,6 @@
 .icon-external {
     &:before {
         content: $icon-external;
-    }
-}
-.icon-return {
-    &:before {
-        content: $icon-return;
-    }
-}
-.icon-email {
-    &:before {
-        content: $icon-email;
-    }
-}
-.icon-facebook {
-    &:before {
-        content: $icon-facebook;
     }
 }
 .icon-twitter {
