--- a/prototype-site/00-source-files/04-icomoon-unpackager/variables.scss
+++ b/prototype-site/00-source-files/04-icomoon-unpackager/variables.scss
@@ -1,18 +1,27 @@
-$icon-share: "\e905";
-$icon-arrow-down: "\e900";
-$icon-arrow-left: "\e901";
-$icon-arrow-right: "\e902";
-$icon-arrow-up: "\e903";
-$icon-search: "\e904";
+$icomoon-font-path: "fonts" !default;
+
+$icon-search: "\e617";
+$icon-arrow--down: "\e610";
+$icon-arrow--left: "\e611";
+$icon-arrow--right: "\e612";
+$icon-arrow--up: "\e613";
+$icon-facebook: "\e614";
+$icon-fontsize: "\e615";
 $icon-rtf: "\e616";
 $icon-pdf: "\e600";
 $icon-word: "\e601";
 $icon-excel: "\e602";
 $icon-powerpoint: "\e603";
+$icon-hamburger: "\e604";
+$icon-audio: "\e605";
+$icon-podcast: "\e606";
+$icon-globe: "\e607";
+$icon-spinner: "\e609";
+$icon-star--empty: "\e60a";
+$icon-star--half: "\e60b";
+$icon-star--full: "\e60c";
 $icon-cross: "\e60d";
 $icon-checkmark: "\e60e";
 $icon-external: "\e60f";
-$icon-return: "\e908";
-$icon-email: "\e909";
-$icon-facebook: "\e906";
-$icon-twitter: "\e907";
+$icon-twitter: "\e608";
+
