lightbox styling fixes

--- a/prototype-site/00-source-files/01-sass/04-base-SASS/btn.scss
+++ b/prototype-site/00-source-files/01-sass/04-base-SASS/btn.scss
@@ -5,7 +5,7 @@
 	@include MG-animate;
 	padding: 5px 10px;
 	display: inline-block;
-	border-radius: 3px!important;
+	border-radius: 3px;
 	font-weight: $semi-bold;
 	text-align: center;
 	transition: all 0.25s ease-in-out;
