--- a/prototype-site/00-source-files/01-sass/05-modules-SASS/remodal-lightbox.scss
+++ b/prototype-site/00-source-files/01-sass/05-modules-SASS/remodal-lightbox.scss
@@ -25,13 +25,10 @@
 		display: block;
 		overflow: visible;
 
-		width: 35px;
-		height: 35px;
 		margin: 0;
-		padding: 0;
+		padding: 7px 10px;
 
 		cursor: pointer;
-		transition: color 0.2s;
 		text-decoration: none;
 
 		//color: #95979c;
