Removed double dashes in icon names

--- a/prototype-site/00-source-files/04-icomoon-unpackager/variables.scss
+++ b/prototype-site/00-source-files/04-icomoon-unpackager/variables.scss
@@ -1,10 +1,10 @@
 $icomoon-font-path: "fonts" !default;
 
 $icon-search: "\e617";
-$icon-arrow--down: "\e610";
-$icon-arrow--left: "\e611";
-$icon-arrow--right: "\e612";
-$icon-arrow--up: "\e613";
+$icon-arrow-down: "\e610";
+$icon-arrow-left: "\e611";
+$icon-arrow-right: "\e612";
+$icon-arrow-up: "\e613";
 $icon-facebook: "\e614";
 $icon-fontsize: "\e615";
 $icon-rtf: "\e616";
@@ -17,9 +17,9 @@ $icon-audio: "\e605";
 $icon-podcast: "\e606";
 $icon-globe: "\e607";
 $icon-spinner: "\e609";
-$icon-star--empty: "\e60a";
-$icon-star--half: "\e60b";
-$icon-star--full: "\e60c";
+$icon-star-empty: "\e60a";
+$icon-star-half: "\e60b";
+$icon-star-full: "\e60c";
 $icon-cross: "\e60d";
 $icon-checkmark: "\e60e";
 $icon-external: "\e60f";
