--- a/prototype-site/00-source-files/04-icomoon-unpackager/style.css
+++ b/prototype-site/00-source-files/04-icomoon-unpackager/style.css
@@ -1,10 +1,10 @@
 @font-face {
     font-family: 'icons';
-    src:    url('fonts/icons.eot?2u7668');
-    src:    url('fonts/icons.eot?2u7668#iefix') format('embedded-opentype'),
-        url('fonts/icons.ttf?2u7668') format('truetype'),
-        url('fonts/icons.woff?2u7668') format('woff'),
-        url('fonts/icons.svg?2u7668#icons') format('svg');
+    src:    url('fonts/icons.eot?ov948m');
+    src:    url('fonts/icons.eot?ov948m#iefix') format('embedded-opentype'),
+        url('fonts/icons.ttf?ov948m') format('truetype'),
+        url('fonts/icons.woff?ov948m') format('woff'),
+        url('fonts/icons.svg?ov948m#icons') format('svg');
     font-weight: normal;
     font-style: normal;
 }
@@ -27,16 +27,16 @@
 .icon-search:before {
     content: "\e617";
 }
-.icon-arrow--down:before {
+.icon-arrow-down:before {
     content: "\e610";
 }
-.icon-arrow--left:before {
+.icon-arrow-left:before {
     content: "\e611";
 }
-.icon-arrow--right:before {
+.icon-arrow-right:before {
     content: "\e612";
 }
-.icon-arrow--up:before {
+.icon-arrow-up:before {
     content: "\e613";
 }
 .icon-facebook:before {
@@ -75,13 +75,13 @@
 .icon-spinner:before {
     content: "\e609";
 }
-.icon-star--empty:before {
+.icon-star-empty:before {
     content: "\e60a";
 }
-.icon-star--half:before {
+.icon-star-half:before {
     content: "\e60b";
 }
-.icon-star--full:before {
+.icon-star-full:before {
     content: "\e60c";
 }
 .icon-cross:before {
