--- a/prototype-site/00-source-files/04-icomoon-unpackager/style.scss
+++ b/prototype-site/00-source-files/04-icomoon-unpackager/style.scss
@@ -2,11 +2,11 @@
 
 @font-face {
     font-family: 'icons';
-    src:    url('#{$icomoon-font-path}/icons.eot?2u7668');
-    src:    url('#{$icomoon-font-path}/icons.eot?2u7668#iefix') format('embedded-opentype'),
-        url('#{$icomoon-font-path}/icons.ttf?2u7668') format('truetype'),
-        url('#{$icomoon-font-path}/icons.woff?2u7668') format('woff'),
-        url('#{$icomoon-font-path}/icons.svg?2u7668#icons') format('svg');
+    src:    url('#{$icomoon-font-path}/icons.eot?ov948m');
+    src:    url('#{$icomoon-font-path}/icons.eot?ov948m#iefix') format('embedded-opentype'),
+        url('#{$icomoon-font-path}/icons.ttf?ov948m') format('truetype'),
+        url('#{$icomoon-font-path}/icons.woff?ov948m') format('woff'),
+        url('#{$icomoon-font-path}/icons.svg?ov948m#icons') format('svg');
     font-weight: normal;
     font-style: normal;
 }
@@ -31,24 +31,24 @@
         content: $icon-search;
     }
 }
-.icon-arrow--down {
+.icon-arrow-down {
     &:before {
-        content: $icon-arrow--down;
+        content: $icon-arrow-down;
     }
 }
-.icon-arrow--left {
+.icon-arrow-left {
     &:before {
-        content: $icon-arrow--left;
+        content: $icon-arrow-left;
     }
 }
-.icon-arrow--right {
+.icon-arrow-right {
     &:before {
-        content: $icon-arrow--right;
+        content: $icon-arrow-right;
     }
 }
-.icon-arrow--up {
+.icon-arrow-up {
     &:before {
-        content: $icon-arrow--up;
+        content: $icon-arrow-up;
     }
 }
 .icon-facebook {
@@ -111,19 +111,19 @@
         content: $icon-spinner;
     }
 }
-.icon-star--empty {
+.icon-star-empty {
     &:before {
-        content: $icon-star--empty;
+        content: $icon-star-empty;
     }
 }
-.icon-star--half {
+.icon-star-half {
     &:before {
-        content: $icon-star--half;
+        content: $icon-star-half;
     }
 }
-.icon-star--full {
+.icon-star-full {
     &:before {
-        content: $icon-star--full;
+        content: $icon-star-full;
     }
 }
 .icon-cross {
