added a side bar to standard template
I got a basic version of a side bar working with a functional sub navigation accordion for navigating sub pages.

It is unstyled so it looks ugly but the functionality is there at least.

--- a/prototype-site/00-source-files/01-sass/01-config-SASS/grid-settings.scss
+++ b/prototype-site/00-source-files/01-sass/01-config-SASS/grid-settings.scss
@@ -14,6 +14,7 @@ $gutter-ieFallback: $CG-body-bg;
 $cellGutters: (
 	'moduleName' : 20px,
 	'demo' : 10px,
+	'pageLayout' : 30px,
 	'mediaQueryFriendly' : (
 		50px, //*default*/
 		25px (max, bp('tablet')), //*affected by media query*/
