a grid system class fix

--- a/prototype-site/00-source-files/ZZ-Swordion-DO-NOT-EDIT/sass/04-base-SASS/00-grid-base-styles.scss
+++ b/prototype-site/00-source-files/ZZ-Swordion-DO-NOT-EDIT/sass/04-base-SASS/00-grid-base-styles.scss
@@ -296,7 +296,7 @@ $grid-bp-list: if(
 		&-left {
 			justify-content: flex-start;
 		}
-		&-left {
+		&-center {
 			justify-content: center;
 		}
 		&-right {
